# cmsc491-SPE

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  vs
apps/: CMakeLists.txt  MinecraftBlocks.h  MinecraftRegionLoader.h  blockIDs.cpp  chunk.cpp  chunkGenerator.py  data.data  increment.cpp  sample_driver.cpp
apps/cam/: Makefile  webcam.cpp
docs/: Doxyfile
profiler/: README.md  run_tests.sh
profiler/10x_Identity-1Mil_Tuples/: README.md  driver.cpp
profiler/1x_Identity-1Mil_Tuples/: README.md  driver.cpp  output.data
src/: CMakeLists.txt  SPE.h  TCPListener.h
src/Data/: Data.cpp  Data.h
src/Engine/: StreamProcessingEngine.cpp  StreamProcessingEngine.h
src/Operators/: Acceptor.cpp  Acceptor.h  Emitter.cpp  Emitter.h  Executor.cpp  Executor.h  InputSource.cpp  InputSource.h  Operator.cpp  Operator.h
src/include/Data/: Data.h
src/include/Operators/: Operator.h
tests/: CMakeLists.txt  README.md  run_tests.sh
tests/Fahrenheit_to_Celsius/: README.md  driver.cpp  input.data  output.data
tests/IncrementOp_test/: README.md  driver.cpp  output.data
tests/average_aggregation/: README.md  driver.cpp  input.data  output.data  test.py
tests/hvz_query/: README.md  data_gen.py  driver.cpp  input.data  output.data
tests/identity_operation/: README.md  driver.cpp  input.data
tests/temp_sensors/: README.md  data_generator.cpp  data_validator.cpp  driver.cpp  input.data  output.data
tests/vowel_counter/: README.md  driver.cpp  input.data  output.data
